Adding KBM icon for kbm remaps.

--- a/src/shadps4.qrc
+++ b/src/shadps4.qrc
@@ -31,5 +31,6 @@
 		<file>images/youtube.png</file>
 		<file>images/website.png</file>
 		<file>images/ps4_controller.png</file>
+		<file>images/keyboard_icon.png</file>
 	</qresource>
 </RCC>
