--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -991,7 +991,7 @@
                       </property>
                       <item>
                        <property name="text">
-                        <string>Borderless</string>
+                        <string>Windowed</string>
                        </property>
                       </item>
                       <item>
