--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -966,7 +966,7 @@
             <item>
             <widget class="QGroupBox" name="displayOptionsGroupBox">
               <property name="title">
-               <string>Display Options</string>
+               <string>Video</string>
               </property>
                <layout class="QVBoxLayout" name="layoutResolution">
                <property name="spacing">
@@ -978,7 +978,7 @@
                  <item>
                   <widget class="QGroupBox" name="displayModeGroupBox">
                    <property name="title">
-                    <string>Mode</string>
+                    <string>Display Mode</string>
                    </property>
                    <layout class="QVBoxLayout" name="displayModeLayout">
                     <item>
