Rename window modes and map

--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -996,7 +996,7 @@
                       </item>
                       <item>
                        <property name="text">
-                        <string>Fullscreen</string>
+                        <string>Borderless Windowed</string>
                        </property>
                       </item>
                      </widget>
