add true fullscreen mode

--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -996,6 +996,11 @@
                     </item>
                     <item>
                      <property name="text">
+                      <string>Fullscreen</string>
+                     </property>
+                    </item>
+                    <item>
+                     <property name="text">
                       <string>Fullscreen (Borderless)</string>
                      </property>
                     </item>
