fix duplicate label name

--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -1047,7 +1047,7 @@
                      </widget>
                     </item>
                     <item>
-                     <widget class="QLabel" name="widthLabel">
+                     <widget class="QLabel" name="heightLabel">
                       <property name="text">
                        <string>H:</string>
                       </property>
